flex/flex-tests/testData/js2_highlighting/IncompatibleOverrideFix3.js2
package {
import flash.events.EventDispatcher;
class <error>FooBase</error> {
    function foo():EventDispatcher {}
}
}

package {
class Foo extends FooBase {
    override function foo():<error descr="Incompatible override, should have return type 'flash.events.EventDispatcher'">int</error> {
    }
}
}
